--- a/docker/pyhss-standalone/source/Dockerfile
+++ b/docker/pyhss-standalone/source/Dockerfile
@@ -54,6 +54,7 @@ COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 
 COPY lib ./bin/lib
+COPY tools ./bin/tools
 COPY services ./bin/services
 
 # Stage: squash
