--- a/docker/seagull/compose.yaml
+++ b/docker/seagull/compose.yaml
@@ -11,10 +11,11 @@ services:
       - ./pyhss-env:/opt/seagull/pyhss-env
       - ./pyhss-env/logs:/opt/seagull/pyhss-env/logs
     restart: "no"
+    network_mode: "host"
 
-# Use the command below to create a network:
-# $> docker network create pyhss-internal
-networks:
-  default:
-    external: true
-    name: "pyhss-internal"
+# # Use the command below to create a network:
+# # $> docker network create pyhss-internal
+# networks:
+#   default:
+#     external: true
+#     name: "pyhss-internal"
