--- a/docker/pyhss-standalone/.env
+++ b/docker/pyhss-standalone/.env
@@ -5,5 +5,6 @@ PGADMIN_VERSION=8.13.0
 
 PYHSS_COMPONENT_NAME=HSS
 
-PYHSS_LOG_ENABLED=false
-PYHSS_LOG_DIR=/pyhss/logs
+PYHSS_LOG_LEVEL=INFO
+PYHSS_LOG_FILES_ENABLED=false
+PYHSS_LOG_FILES_PATH=/pyhss/logs
