Seagull: Add scripts for UDR-UDR traffic, generate DB content

--- a/docker/pyhss-standalone/compose.yaml
+++ b/docker/pyhss-standalone/compose.yaml
@@ -40,6 +40,7 @@ services:
       - ./.local/pyhss:/mnt/hss
       - ./.local/logs:/pyhss/logs
       - ./config.yaml:/pyhss/config.yaml
+      - ./default_sh_user_data.xml:/pyhss/bin/default_sh_user_data.xml
     ports:
       - "3868:3868/tcp"
       - "3868:3868/sctp"
