--- a/docker/pyhss-distibuted/pyhss/.env
+++ b/docker/pyhss-distibuted/pyhss/.env
@@ -6,3 +6,5 @@ PYHSS_COMPONENT_NAME=HSS
 PYHSS_LOG_LEVEL=INFO
 PYHSS_LOG_FILES_ENABLED=false
 PYHSS_LOG_FILES_PATH=/pyhss/logs
+
+PYHSS_HSS_SERVICE_WORKERS=1
