--- a/docker/pyhss-standalone/compose.yaml
+++ b/docker/pyhss-standalone/compose.yaml
@@ -36,6 +36,7 @@ services:
       - PYHSS_LOG_LEVEL=INFO
       - PYHSS_LOG_FILES_ENABLED=false
       - PYHSS_LOG_FILES_PATH=/pyhss/logs
+      - PYHSS_HSS_SERVICE_WORKERS=8
     volumes:
       - ./.local/pyhss:/mnt/hss
       - ./.local/logs:/pyhss/logs
